# news-portal

./: .gitignore
backend/: .env.local  .env.prod  .ruff.toml  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
backend/core/api/: urls.py  views.py
backend/core/api/authentication/: apps.py  urls.py  views.py
backend/core/api/news/: apps.py  models.py  urls.py  views.py
backend/core/api/news/migrations/: 0001_initial.py  0002_news_author.py  0003_news_theme.py
backend/core/general/: error_handler.py  logger.py
backend/core/general/utils/: collections.py  misc.py  settings.py
backend/core/project/: asgi.py  celeryconfig.py  middleware.py  urls.py
backend/core/project/celery/: __init__.py  tasks.py
backend/core/project/settings/: __init__.py  base.py  caches.py  custom.py  database.py  docker.py  envvars.py  internationalization.py  logging.py  rest.py  security.py
backend/core/project/settings/templates/: settings.local.py  settings.prod.py
backend/local/: settings.local.py  settings.prod.py
backend/nginx/: default.conf
backend/scripts/: celery-beat-entrypoint.sh  celery-entrypoint.sh  entrypoint.sh
frontend/: .env.prod  Dockerfile  docker-compose.yml  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend/nginx/: nginx.conf  nginx.local.conf
frontend/src/: main.tsx
frontend/src/app/: App.tsx
frontend/src/app/routes/: router.tsx  routes.ts
frontend/src/pages/HomePage/: index.tsx  style.module.scss
frontend/src/styles/: consts.scss  index.scss  normalize.scss
frontend/src/types/news/: index.ts
